# api/src/errors/ValidationErrors/ValidationError.ts
@@ -1,0 +1,4 @@
+export interface ValidateErrorJSON {
+	message: "Validation failed";
+	details: { [name: string]: unknown };
+}
